--- a/XUnitTestProject1/XUnitTestProject1.csproj
+++ b/XUnitTestProject1/XUnitTestProject1.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
-    <PackageReference Include="McMaster.NETCore.Plugins" Version="0.2.4" />
+    <PackageReference Include="McMaster.NETCore.Plugins" Version="0.3.0-beta.36" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Solid.Practices.Composition.Core" Version="2.1.0" />
     <PackageReference Include="Solid.Practices.Modularity" Version="2.1.0" />
