fix: adding more scenarios

--- a/SomeAssembly.Consumer.Registration/SomeAssembly.Consumer.Registration.csproj
+++ b/SomeAssembly.Consumer.Registration/SomeAssembly.Consumer.Registration.csproj
@@ -10,7 +10,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Solid.Practices.Modularity" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Solid.Practices.Modularity" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SomeAssembly.Consumer\SomeAssembly.Consumer.csproj" />
   </ItemGroup>
 
 </Project>
