fix: add reference to contracts assembly (Samples.Specifications.Server.Domain) to resolve service registration issue

--- a/Samples.Specifications.Server.Facade/Samples.Specifications.Server.Facade.csproj
+++ b/Samples.Specifications.Server.Facade/Samples.Specifications.Server.Facade.csproj
@@ -23,6 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Samples.Specifications.Server.Domain\Samples.Specifications.Server.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="Samples.Specifications.Server.Facade.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
