--- a/SomeAssembly.Facade/SomeAssembly.Facade.csproj
+++ b/SomeAssembly.Facade/SomeAssembly.Facade.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LogoFX.Server.Bootstrapping" Version="2.0.0-rc7" />
+    <PackageReference Include="LogoFX.Server.Bootstrapping" Version="2.1.0" />
     <PackageReference Include="McMaster.NETCore.Plugins" Version="0.3.0-beta.36" />
   </ItemGroup>
 
