--- a/Samples.Specifications.Server.Facade/Samples.Specifications.Server.Facade.csproj
+++ b/Samples.Specifications.Server.Facade/Samples.Specifications.Server.Facade.csproj
@@ -15,7 +15,7 @@
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
     <PackageReference Include="LogoFX.Server.Bootstrapping" Version="2.1.0" />
-    <PackageReference Include="McMaster.NETCore.Plugins" Version="0.3.0-beta.36" />
+    <PackageReference Include="McMaster.NETCore.Plugins" Version="0.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.0.0-rc4" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.0.0-rc4" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.0.0-rc4" />
